Re-adjusted the background-image for the header container to maintain a close style to the base design. Utilized absolute positioning and the z-index to ensure the image stayed at the top of the page while also being underneath the main container.

--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,20 @@ body {
 }
 
 header {
-    background-image: url('./assets/images/background-pattern-mobile.svg');
-    background-position: center;
+    width: 100%;
+    height: 400px;
+    margin: -20px;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+
+    .header-background {
+        object-fit: cover;
+    }
 }
 
 main {
+    z-index: 1;
     background-color: white;
     padding: 20px;
     border-radius: 10px;
@@ -37,7 +46,7 @@ main {
 
     .topic-container {
         display: grid;
-        grid-template-columns: 200px 1fr;
+        grid-template-columns: 210px 1fr;
         align-items: center;
         gap: 2rem;
 
